[package]
name = "reign-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
glob = "0.3.1"
uuidv4 = "1.0.0"
tokio = { version = "1.37.0", features = ["full"] }

tracing = { version = "0.1.40", features = ["log", "attributes", "std"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "fmt", "env-filter"] }
chrono = { version = "0.4.38", features = ["std"] }
futures = "0.3.30"


# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false # required for the cross-compile to work properly


# The benchmarking profile, used for `cargo bench` and `cargo test --release`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 1
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 8
incremental = false
overflow-checks = true


# The development (default) profile, used for `cargo build`.
[profile.dev]
opt-level = 1                 # controls the `--opt-level` the compiler builds with.
                              # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                              # 's' attempts to reduce size, 'z' reduces size even more.
debug = 2                     # (u32 or bool) Include debug information (debug symbols).
                              # Equivalent to `-C debuginfo=2` compiler flag.
debug-assertions = true       # controls whether debug assertions are enabled
                              # (e.g. debug_assert!() and arithmetic overflow checks)
rpath = false                 # controls whether compiler should set loader paths.
                              # If true, passes `-C rpath` flag to the compiler.
lto = false                   # Link Time Optimization usually reduces size of binaries
                              # and static libraries. Increases compilation time.
                              # If true, passes `-C lto` flag to the compiler, and if a
                              # string is specified like 'thin' then `-C lto=thin` will
                              # be passed.
codegen-units = 8             # if > 1 enables parallel code generation which improves
                              # compile times, but prevents some optimizations.
                              # Passes `-C codegen-units`.
panic = 'unwind'              # panic strategy (`-C panic=...`), can also be 'abort'
incremental = false           # whether or not incremental compilation is enabled
overflow-checks = true        # use overflow checks for integer arithmetic.
                              # Passes the `-C overflow-checks=...` flag to the compiler
